--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                     <div class="video-info">
                         <h3>Hurry Slowly: Mindfulness in Motion, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -7557,7 +7557,7 @@
                         <div class="video-info">
                             <h3>Hurry Slowly: Mindfulness in Motion, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
