--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Finding Inner Peace</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>What is Sadhguru’s Daily Routine? @curly.tales asks</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2609,9 +2609,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=ikPhvILF1cs" target="_blank">
-                    <img src="https://i.ytimg.com/vi/ikPhvILF1cs/mqdefault.jpg" alt="SIDEMEN ULTIMATE PRECISION TEST">
+                    <img src="https://i.ytimg.com/vi/ikPhvILF1cs/mqdefault.jpg" alt="SIDEMEN PRECISION TEST">
                     <div class="video-info">
-                        <h3>SIDEMEN ULTIMATE PRECISION TEST</h3>
+                        <h3>SIDEMEN PRECISION TEST</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">Sep 02, 2025</div>
                     </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Finding Inner Peace</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>What is Sadhguru’s Daily Routine? @curly.tales asks</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9832,9 +9832,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=ikPhvILF1cs" target="_blank">
-                        <img src="https://i.ytimg.com/vi/ikPhvILF1cs/mqdefault.jpg" alt="SIDEMEN ULTIMATE PRECISION TEST">
+                        <img src="https://i.ytimg.com/vi/ikPhvILF1cs/mqdefault.jpg" alt="SIDEMEN PRECISION TEST">
                         <div class="video-info">
-                            <h3>SIDEMEN ULTIMATE PRECISION TEST</h3>
+                            <h3>SIDEMEN PRECISION TEST</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">Sep 02, 2025</div>
                         </div>
