--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Man Who changed the pizza Business forever!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">24 minutes ago</div>
+                        <div class="date">31 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>This Meditation Opens Up Past Life Memories | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">40 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -174,9 +174,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=Z7ulJrZa8n4" target="_blank">
-                    <img src="https://i.ytimg.com/vi/Z7ulJrZa8n4/mqdefault.jpg" alt="Can Labour be saved?">
+                    <img src="https://i.ytimg.com/vi/Z7ulJrZa8n4/mqdefault.jpg" alt="Is the Labour government over?">
                     <div class="video-info">
-                        <h3>Can Labour be saved?</h3>
+                        <h3>Is the Labour government over?</h3>
                         <div class="channel">Garys Economics</div>
                         <div class="date">7 hours ago</div>
                     </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Acceptance in the Present Moment, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5090,9 +5090,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=Z7ulJrZa8n4" target="_blank">
-                        <img src="https://i.ytimg.com/vi/Z7ulJrZa8n4/mqdefault.jpg" alt="Can Labour be saved?">
+                        <img src="https://i.ytimg.com/vi/Z7ulJrZa8n4/mqdefault.jpg" alt="Is the Labour government over?">
                         <div class="video-info">
-                            <h3>Can Labour be saved?</h3>
+                            <h3>Is the Labour government over?</h3>
                             <div class="channel">Garys Economics</div>
                             <div class="date">7 hours ago</div>
                         </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>This Meditation Opens Up Past Life Memories | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">40 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7326,7 +7326,7 @@
                         <div class="video-info">
                             <h3>Acceptance in the Present Moment, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>The Man Who changed the pizza Business forever!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">24 minutes ago</div>
+                            <div class="date">31 minutes ago</div>
                         </div>
                     </a>
                 </div>
